--- a/backend/Dockerfile
+++ b/backend/Dockerfile
@@ -1,13 +1,18 @@
-# Stage 1: build with Maven
-FROM maven:3.8.5-openjdk-21 AS build
+# Stage 1: Build with Maven
+FROM maven:3.9.6-eclipse-temurin-17 AS build
 WORKDIR /app
 COPY pom.xml .
-COPY src ./src
-RUN mvn clean package -DskipTests
+RUN mvn dependency:go-offline
+COPY . .
+RUN mvn -B -DskipTests package
 
-# Stage 2: runtime
-FROM openjdk:21-jdk-slim
+# Stage 2: Run the application
+FROM eclipse-temurin:17-jdk-alpine
 WORKDIR /app
 COPY --from=build /app/target/*.jar app.jar
+
+# Render exposes dynamic PORT env
+ENV PORT=8080
 EXPOSE 8080
+
 ENTRYPOINT ["java", "-jar", "app.jar"]
